# Flexi

./: .gitignore  Makefile  README.md  dev_launch.sh  pyproject.toml
apps/account/: tests.py
apps/account/migrations/: 0001_initial.py
apps/account/models/: __init__.py  user.py
apps/core/: __init__.py  app_loader.py  apps.py  models.py  schema.py  urls.py
flexi/: asgi.py  urls.py  wsgi.py
flexi/settings/: __init__.py  base.py  common.py  database.py  logging.py  security.py
