[project]
name = "flexi"
version = "0.1.0"
description = "Flexi is a tool for managing your media library for streaming"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-filter>=25.1",
    "django-graphql-jwt>=0.4.0",
    "django-guardian>=3.0.3",
    "django-simple-history>=3.10.1",
    "django-split-settings>=1.3.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key>=3.1.0",
    "graphene-django>=3.2.3",
    "pyaml>=25.7.0",
    "python-decouple>=3.8",
]
